made join and bite internal policies

--- a/cadcad_tutorial/robots_and_marbles_param_sweep.ipynb
+++ b/cadcad_tutorial/robots_and_marbles_param_sweep.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "PSUBs = [{\n",
     "    \"policies\": {   # Policies (define _input)\n",
-    "        \"robot_policy_0\": robot_policy(0),\n",
+    "        \"robot_policy_0\": find_all_valuts_to_bite(),\n",
     "        \"robot_policy_1\": robot_policy(1)\n",
     "    },\n",
     "    \"variables\": {  # State variable update functions\n",
