refactored , began refactoring

--- a/dai_cadcad/tests.ipynb
+++ b/dai_cadcad/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,33 +38,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# \"Partial state update blocks\", each dict in the list represents one execution block within which the state update functions run in parallel (blocks are run serially).\n",
     "\n",
     "partial_state_update_blocks = [{\n",
-    "    \"policies\": {   # Policies (define _input)\n",
-    "        \"join_new_vault\": make_join(150, 100),\n",
+    "    \"policies\": {\n",
+    "        \"join_new_vault\": join_all,\n",
     "    },\n",
-    "    \"variables\": {  # State variable update functions\n",
+    "    \"variables\": {\n",
     "        \"vat\": update_vat,\n",
     "    }\n",
     "},{\n",
     "    \"policies\": {\n",
-    "        \"bite_new_vault\": make_bite(),   # How to get IDs of created vaults?\n",
-    "        \"variables\": {\n",
-    "            \"vat\": update_vat,\n",
-    "            \"flipper\": update_flipper\n",
-    "        }\n",
+    "        \"bite_new_vault\": bite_all,\n",
+    "    },\n",
+    "    \"variables\": {\n",
+    "        \"vat\": update_vat,\n",
+    "        \"flipper\": update_flipper\n",
     "    }\n",
     "}]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -95,7 +95,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "\n                            __________   ____ \n          ________ __ _____/ ____/   |  / __ \\\n         / ___/ __` / __  / /   / /| | / / / /\n        / /__/ /_/ / /_/ / /___/ ___ |/ /_/ / \n        \\___/\\__,_/\\__,_/\\____/_/  |_/_____/  \n        by BlockScience\n        \nExecution Mode: multi_proc: [<cadCAD.configuration.Configuration object at 0x7fbd349a6c88>]\nConfigurations: [<cadCAD.configuration.Configuration object at 0x7fbd349a6c88>]\n"
+     "text": "\n                            __________   ____ \n          ________ __ _____/ ____/   |  / __ \\\n         / ___/ __` / __  / /   / /| | / / / /\n        / /__/ /_/ / /_/ / /___/ ___ |/ /_/ / \n        \\___/\\__,_/\\__,_/\\____/_/  |_/_____/  \n        by BlockScience\n        \nExecution Mode: multi_proc: [<cadCAD.configuration.Configuration object at 0x7f88b0282a90>]\nConfigurations: [<cadCAD.configuration.Configuration object at 0x7f88b0282a90>]\n"
     }
    ],
    "source": [
@@ -119,14 +119,14 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{'dummy_flip': {'flip_id': '',\n  'phase': '',\n  'debt_to_flip': 0,\n  'vault': '',\n  'lot_eth': 0,\n  'bid_dai': 0,\n  'bidder': '',\n  'expiry': 0},\n 'd82c09084e594b5abcae4b7e5cf74130': {'flip_id': 'd82c09084e594b5abcae4b7e5cf74130',\n  'phase': 'tend',\n  'debt_to_flip': 0,\n  'vault': 'dummy_vault',\n  'lot_eth': 0,\n  'bid_dai': 0,\n  'bidder': '',\n  'expiry': 0}}"
+      "text/plain": "{'dummy_vault': {'vault_id': '', 'eth': 0, 'dai': 0, 'bitten': False},\n '2370dbe860f0401aafb0237fd4693ed0': {'vault_id': '2370dbe860f0401aafb0237fd4693ed0',\n  'eth': 150,\n  'dai': 100,\n  'bitten': False}}"
      },
      "metadata": {},
      "execution_count": 9
     }
    ],
    "source": [
-    "results[0][\"flipper\"][1]"
+    "results[0][\"vat\"][2]"
    ]
   },
   {
