--- a/tests/join_bite.ipynb
+++ b/tests/join_bite.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "partial_state_update_blocks = [{\n",
     "    \"policies\": {\n",
-    "        \"join_new_vault\": join_all,\n",
+    "        \"join_new_vault\": join_vault_all,\n",
     "    },\n",
     "    \"variables\": {\n",
     "        \"vat\": update_vat,\n",
